Added internal styling

--- a/index.html
+++ b/index.html
@@ -3,9 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Starbuzz</title>
+
+    <style type="text/css">
+        body{
+            background-color: blue;
+            color: white;
+        }
+
+        h1{
+            background-color: red;
+            display: inline-block; 
+            border: 3px solid black; 
+            padding-bottom: 10px;
+            margin-top: 10px;
+        }
+
+    </style>
 </head>
 <body>
-    <h1>This is a new folder in github and I want to show that I've written my first lines of code in this repository.</h1>
+
+    <h1>Starbuzz Coffee Beverages</h1>
+
+    <div>
+        <h2 class="green_bg">House Blend, $1.49</h2>
+        <p>A smooth, mild blend of coffees from Mexico, Bolivia and
+        Guatemala.</p>
+    </div>
+        
+    <h2>Mocha Caffe Latte, $2.35</h2>
+    <p>Espresso, steamed milk and chocolate syrup.</p>
+
+    <h2 class="green_bg">Cappuccino, $1.89</h2>
+    <p>A mixture of espresso, steamed milk and milk foam.</p>
+
+    <h2>Chai Tea, $1.85</h2>
+    <p>A spicy drink made with black tea, spices, milk and honey.</p>
 </body>
 </html>
