rest of the code

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
             margin-top: 10px;
         }
 
+        a{
+            color: black;
+        }
+
     </style>
 </head>
 <body>
@@ -39,5 +43,12 @@
 
     <h2>Chai Tea, $1.85</h2>
     <p>A spicy drink made with black tea, spices, milk and honey.</p>
+    
+
+    <div>
+        If you want to see the mission of my company, just click <a href="./mission.html">here</a>
+    </div>
+
+    <div>This is the link to move to the  other page <a href="./pages/index.html">here</a></div>
 </body>
 </html>
